--- a/Seance1Mois1.html
+++ b/Seance1Mois1.html
@@ -1,589 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fiche de Cours - Séance 1 : Introduction à Python</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Raleway', sans-serif;
-            background-color: #000000;
-            color: #FFFFFF;
-            line-height: 1.6;
-            padding: 40px;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            background-color: #1a1a1a;
-            padding: 50px;
-            border: 3px solid #FFD700;
-        }
-
-        h1 {
-            color: #FFD700;
-            font-size: 2.5em;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 30px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
-
-        h2 {
-            color: #FFD700;
-            font-size: 1.8em;
-            font-weight: 600;
-            margin-top: 40px;
-            margin-bottom: 20px;
-            border-bottom: 2px solid #FFD700;
-            padding-bottom: 10px;
-        }
-
-        h3 {
-            color: #FFD700;
-            font-size: 1.3em;
-            font-weight: 600;
-            margin-top: 25px;
-            margin-bottom: 15px;
-        }
-
-        h4 {
-            color: #FFFFFF;
-            font-size: 1.1em;
-            font-weight: 600;
-            margin-top: 20px;
-            margin-bottom: 10px;
-        }
-
-        p,
-        li {
-            color: #FFFFFF;
-            margin-bottom: 10px;
-            font-weight: 400;
-        }
-
-        ul,
-        ol {
-            margin-left: 30px;
-            margin-bottom: 20px;
-        }
-
-        li {
-            margin-bottom: 8px;
-        }
-
-        .objectifs {
-            background-color: #2a2a2a;
-            padding: 20px;
-            border-left: 5px solid #FFD700;
-            margin-bottom: 30px;
-        }
-
-        .objectifs ul {
-            list-style: none;
-            margin-left: 0;
-        }
-
-        .objectifs li:before {
-            content: "📚 ";
-            color: #FFD700;
-        }
-
-        code {
-            background-color: #2a2a2a;
-            color: #FFD700;
-            padding: 3px 8px;
-            border-radius: 4px;
-            font-family: 'Courier New', monospace;
-            font-size: 0.95em;
-        }
-
-        pre {
-            background-color: #0a0a0a;
-            border: 1px solid #FFD700;
-            padding: 20px;
-            border-radius: 8px;
-            overflow-x: auto;
-            margin: 15px 0;
-        }
-
-        pre code {
-            background: none;
-            padding: 0;
-            color: #FFFFFF;
-        }
-
-        .attention {
-            background-color: #2a2a2a;
-            border-left: 5px solid #FFD700;
-            padding: 15px;
-            margin: 20px 0;
-        }
-
-        .attention strong {
-            color: #FFD700;
-        }
-
-        .check {
-            color: #FFD700;
-        }
-
-        .cross {
-            color: #ff4444;
-        }
-
-        .conseil {
-            background-color: #2a2a2a;
-            border: 2px solid #FFD700;
-            padding: 20px;
-            margin: 30px 0;
-            border-radius: 8px;
-        }
-
-        .conseil h3 {
-            margin-top: 0;
-        }
-
-        .exercices {
-            background-color: #0a0a0a;
-            padding: 30px;
-            border: 3px solid #FFD700;
-            margin-top: 40px;
-        }
-
-        .exercices h2 {
-            text-align: center;
-            margin-top: 0;
-        }
-
-        .exercice-item {
-            background-color: #1a1a1a;
-            padding: 20px;
-            margin: 20px 0;
-            border-left: 4px solid #FFD700;
-        }
-
-        .resultat {
-            color: #FFD700;
-            font-style: italic;
-        }
-
-        .footer {
-            text-align: center;
-            margin-top: 50px;
-            padding-top: 30px;
-            border-top: 2px solid #FFD700;
-            color: #888;
-        }
-
-        strong {
-            color: #FFD700;
-            font-weight: 600;
-        }
-
-        @media print {
-            body {
-                background-color: white;
-                color: black;
-            }
-
-            .container {
-                border: none;
-                box-shadow: none;
-            }
-        }
-
-        .pdf-mode {
-            background-color: white !important;
-            color: black !important;
-        }
-
-        .pdf-mode .container {
-            background-color: white !important;
-            color: #1a1a1a !important;
-            border: 2px solid #333 !important;
-        }
-
-        .pdf-mode h1,
-        .pdf-mode h2,
-        .pdf-mode h3,
-        .pdf-mode h4 {
-            color: #1a1a1a !important;
-        }
-
-        .pdf-mode strong {
-            color: #1a1a1a !important;
-        }
-
-        .pdf-mode p,
-        .pdf-mode li {
-            color: #1a1a1a !important;
-        }
-
-        .pdf-mode .objectifs,
-        .pdf-mode .attention,
-        .pdf-mode .conseil {
-            background-color: #f5f5f5 !important;
-            border-color: #666 !important;
-        }
-
-        .pdf-mode .exercices {
-            background-color: #f9f9f9 !important;
-            border-color: #666 !important;
-        }
-
-        .pdf-mode .exercice-item {
-            background-color: white !important;
-            border-color: #666 !important;
-        }
-
-        .pdf-mode code {
-            background-color: #e8e8e8 !important;
-            color: #1a1a1a !important;
-        }
-
-        .pdf-mode pre {
-            background-color: #f9f9f9 !important;
-            border-color: #666 !important;
-        }
-
-        .pdf-mode pre code {
-            color: #1a1a1a !important;
-        }
-
-        .pdf-mode .resultat {
-            color: #1a1a1a !important;
-        }
-
-        .pdf-mode .footer {
-            color: #666 !important;
-            border-color: #666 !important;
-        }
-    </style>
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="container">
-        <h1>Fiche de Cours - Séance 1 : Introduction à Python</h1>
-
-        <div class="objectifs">
-            <h3>📚 Objectifs de la séance</h3>
-            <ul>
-                <li>Installer et configurer Python sur votre ordinateur</li>
-                <li>Comprendre ce qu'est Python et pourquoi l'apprendre</li>
-                <li>Écrire votre premier programme</li>
-                <li>Maîtriser les variables et les types de données de base</li>
-            </ul>
-        </div>
-
-        <h2>1. Qu'est-ce que Python ?</h2>
-        <p>Python est un langage de programmation <strong>populaire</strong>, <strong>facile à apprendre</strong> et
-            <strong>puissant</strong>. Il est utilisé dans de nombreux domaines : développement web, analyse de données,
-            intelligence artificielle, automatisation, etc.
-        </p>
-
-        <h3>Pourquoi apprendre Python ?</h3>
-        <ul>
-            <li>Syntaxe simple et lisible (proche de l'anglais)</li>
-            <li>Grande communauté et nombreuses ressources</li>
-            <li>Polyvalent : adapté à de nombreux projets</li>
-            <li>Très demandé sur le marché du travail</li>
-        </ul>
-
-        <h2>2. Installation et Configuration de l'Environnement</h2>
-
-        <h3>Étape 1 : Installer Python</h3>
-        <ol>
-            <li>Rendez-vous sur <code>python.org/downloads</code></li>
-            <li>Téléchargez la dernière version de Python (3.12 ou supérieur)</li>
-            <li>Lancez l'installateur</li>
-            <li><strong>Important</strong> : Cochez la case "Add Python to PATH"</li>
-            <li>Cliquez sur "Install Now"</li>
-        </ol>
-
-        <h3>Étape 2 : Vérifier l'installation</h3>
-        <p>Ouvrez un terminal (ou invite de commandes) et tapez :</p>
-        <pre><code>python --version</code></pre>
-        <p>Vous devriez voir s'afficher la version de Python installée.</p>
-
-        <h3>Étape 3 : Installer un éditeur de code</h3>
-        <p>Nous recommandons <strong>Visual Studio Code (VSCode)</strong> :</p>
-        <ol>
-            <li>Téléchargez VSCode sur <code>code.visualstudio.com</code></li>
-            <li>Installez l'extension "Python" depuis le menu des extensions</li>
-            <li>Redémarrez VSCode après l'installation</li>
-        </ol>
-        <p><strong>Alternative</strong> : PyCharm Community Edition (gratuit)</p>
-
-        <h2>3. Premier Programme : "Hello World"</h2>
-
-        <h3>Dans VSCode :</h3>
-        <ol>
-            <li>Créez un nouveau fichier : <code>hello.py</code></li>
-            <li>Écrivez le code suivant :</li>
-        </ol>
-
-        <pre><code>print("Hello World")</code></pre>
-
-        <ol start="3">
-            <li>Enregistrez le fichier (Ctrl+S ou Cmd+S)</li>
-            <li>Exécutez-le : clic droit → "Run Python File in Terminal"</li>
-        </ol>
-
-        <p><strong>Résultat attendu :</strong></p>
-        <pre><code>Hello World</code></pre>
-
-        <p>🎉 <strong>Félicitations !</strong> Vous venez d'écrire votre premier programme Python !</p>
-
-        <h2>4. Les Variables</h2>
-
-        <p>Une <strong>variable</strong> est comme une boîte qui stocke une information. On peut lui donner un nom et y
-            placer une valeur.</p>
-
-        <h3>Syntaxe :</h3>
-        <pre><code>nom_variable = valeur</code></pre>
-
-        <h3>Exemples :</h3>
-        <pre><code>prenom = "Akouvi"
-age = 19
-taille = 1.65
-est_etudiante = True</code></pre>
-
-        <h3>Règles pour nommer les variables :</h3>
-        <ul>
-            <li><span class="check">✅</span> Commencer par une lettre ou un underscore (_)</li>
-            <li><span class="check">✅</span> Contenir des lettres, chiffres et underscores</li>
-            <li><span class="check">✅</span> Utiliser des noms descriptifs (ex : <code>age</code> plutôt que
-                <code>a</code>)
-            </li>
-            <li><span class="cross">❌</span> Pas d'espaces (utilisez <code>_</code> : <code>nom_complet</code>)</li>
-            <li><span class="cross">❌</span> Pas de mots-clés Python (ex : <code>print</code>, <code>if</code>,
-                <code>for</code>)
-            </li>
-            <li><span class="cross">❌</span> Éviter les accents dans les noms de variables</li>
-        </ul>
-
-        <h2>5. Les Types de Données</h2>
-
-        <h3>5.1 Les Entiers (int)</h3>
-        <p>Nombres entiers, positifs ou négatifs, sans virgule.</p>
-        <pre><code>age = 20
-nombre_eleves = 30
-temperature = -5
-annee = 2026</code></pre>
-        <p><strong>Utilisation :</strong> Comptage, âges, quantités, années, etc.</p>
-
-        <h3>5.2 Les Nombres à Virgule (float)</h3>
-        <p>Nombres décimaux avec une partie après la virgule.</p>
-        <pre><code>taille = 1.68
-prix = 19.99
-note = 15.5
-pi = 3.14159</code></pre>
-
-        <div class="attention">
-            <p><strong>⚠️ Attention :</strong> En Python, utilisez un <strong>point</strong> (.) et non une virgule (,)
-            </p>
-        </div>
-
-        <h3>5.3 Les Chaînes de Caractères (str)</h3>
-        <p>Texte, toujours entre guillemets (simples <code>'</code> ou doubles <code>"</code>).</p>
-        <pre><code>prenom = "Akouvi"
-nom = "Mensah"
-ville = "Lomé"
-message = "Bonjour tout le monde !"</code></pre>
-        <p><strong>Astuce :</strong> Utilisez des guillemets doubles par défaut.</p>
-
-        <h3>5.4 Les Booléens (bool)</h3>
-        <p>Valeurs logiques : <code>True</code> (vrai) ou <code>False</code> (faux).</p>
-        <pre><code>est_majeure = True
-a_fini_cours = False
-pluie = True
-soleil = False</code></pre>
-
-        <div class="attention">
-            <p><strong>⚠️ Attention :</strong> <code>True</code> et <code>False</code> commencent par une
-                <strong>majuscule</strong>.
-            </p>
-        </div>
-
-        <h2>6. Afficher des Variables</h2>
-
-        <p>La fonction <code>print()</code> permet d'afficher des informations à l'écran.</p>
-
-        <h3>Afficher une variable :</h3>
-        <pre><code>prenom = "Prisca"
-print(prenom)</code></pre>
-        <p class="resultat">Résultat : Prisca</p>
-
-        <h3>Afficher du texte et des variables :</h3>
-        <pre><code>prenom = "Akouvi"
-age = 19
-print("Je m'appelle", prenom, "et j'ai", age, "ans")</code></pre>
-        <p class="resultat">Résultat : Je m'appelle Akouvi et j'ai 19 ans</p>
-
-        <h3>Afficher avec des f-strings (méthode moderne) :</h3>
-        <pre><code>prenom = "Prisca"
-age = 20
-print(f"Je m'appelle {prenom} et j'ai {age} ans")</code></pre>
-        <p class="resultat">Résultat : Je m'appelle Prisca et j'ai 20 ans</p>
-
-        <h2>7. Connaître le Type d'une Variable</h2>
-
-        <p>Utilisez la fonction <code>type()</code> pour vérifier le type d'une variable :</p>
-
-        <pre><code>age = 20
-print(type(age))
-# Résultat : &lt;class 'int'&gt;
-
-taille = 1.65
-print(type(taille))
-# Résultat : &lt;class 'float'&gt;
-
-prenom = "Akouvi"
-print(type(prenom))
-# Résultat : &lt;class 'str'&gt;
-
-est_etudiante = True
-print(type(est_etudiante))
-# Résultat : &lt;class 'bool'&gt;</code></pre>
-
-        <h2>8. Points Clés à Retenir</h2>
-
-        <ul>
-            <li><span class="check">✅</span> Python s'installe avec python.org + VSCode avec l'extension Python</li>
-            <li><span class="check">✅</span> <code>print()</code> affiche du texte ou des variables à l'écran</li>
-            <li><span class="check">✅</span> Les variables stockent des informations avec <code>nom = valeur</code></li>
-            <li><span class="check">✅</span> <strong>4 types de base :</strong>
-                <ul>
-                    <li><strong>int</strong> : nombres entiers (19, 20, 100)</li>
-                    <li><strong>float</strong> : nombres décimaux (1.65, 15.5)</li>
-                    <li><strong>str</strong> : texte entre guillemets ("Akouvi")</li>
-                    <li><strong>bool</strong> : True ou False</li>
-                </ul>
-            </li>
-            <li><span class="check">✅</span> Utilisez <code>type()</code> pour connaître le type d'une variable</li>
-            <li><span class="check">✅</span> Les f-strings facilitent l'affichage : <code>f"Texte {variable}"</code>
-            </li>
-            <li><span class="check">✅</span> Les noms de variables ne doivent pas contenir d'espaces</li>
-        </ul>
-
-        <div class="conseil">
-            <h3>💡 Conseil du Jour</h3>
-            <p><strong>La programmation s'apprend en pratiquant !</strong> N'ayez pas peur de faire des erreurs, elles
-                font partie du processus d'apprentissage. Testez, expérimentez, modifiez votre code. C'est comme ça
-                qu'on progresse !</p>
-        </div>
-
-        <div class="exercices">
-            <h2>📝 Exercices Pratiques Simples</h2>
-
-            <div class="exercice-item">
-                <h3>Exercice 1 : Votre Présentation</h3>
-                <p>Créez un programme qui affiche votre présentation avec votre prénom, votre âge et votre ville.</p>
-            </div>
-
-            <div class="exercice-item">
-                <h3>Exercice 2 : Créer des Variables</h3>
-                <p>Créez des variables pour stocker votre prénom, votre âge, votre taille et un booléen indiquant si
-                    vous aimez programmer. Affichez ensuite toutes ces informations avec <code>print()</code>.</p>
-            </div>
-
-            <div class="exercice-item">
-                <h3>Exercice 3 : Vérifier les Types</h3>
-                <p>Créez 4 variables (une de chaque type : int, float, str, bool) et utilisez <code>type()</code> pour
-                    afficher leur type.</p>
-            </div>
-
-            <div class="exercice-item">
-                <h3>Exercice 4 : Informations Personnelles</h3>
-                <p>Créez un programme qui affiche votre prénom et nom, votre âge, votre ville et votre matière préférée.
-                </p>
-            </div>
-
-            <div class="exercice-item">
-                <h3>Exercice 5 : Expérimentation avec les Noms de Variables</h3>
-                <p>Testez ce qui fonctionne ou non avec les noms de variables. Essayez de créer des variables avec ces
-                    noms : <code>mon age</code>, <code>mon_age</code>, <code>2age</code>, <code>age2</code>,
-                    <code>Age</code> et <code>age</code>. Notez quels noms fonctionnent et lesquels causent des erreurs.
-                </p>
-            </div>
-
-            <div class="exercice-item">
-                <h3>Exercice 6 : Calcul Simple</h3>
-                <p>Créez deux variables <code>longueur = 5</code> et <code>largeur = 3</code>. Calculez l'aire d'un
-                    rectangle et affichez le résultat avec un message clair.</p>
-            </div>
-        </div>
-
-        <div class="footer">
-            <p><strong>Prochaine séance :</strong> Opérations et Entrées/Sorties (Calculatrice simple)</p>
-            <p>Rédigé par KoffiLeDev - Janvier 2026</p>
-        </div>
-    </div>
-
-    <script>
-        function telechargerPDF() {
-            // Sélectionner les éléments
-            const element = document.querySelector('.container');
-            const body = document.body;
-
-            // Appliquer le mode PDF temporairement
-            body.classList.add('pdf-mode');
-
-            // Attendre un peu pour que les styles soient appliqués
-            setTimeout(() => {
-                // Options de configuration pour le PDF
-                const options = {
-                    margin: [10, 10, 10, 10],
-                    filename: 'Fiche_Cours_Python_Seance1.pdf',
-                    image: {
-                        type: 'jpeg',
-                        quality: 0.92
-                    },
-                    html2canvas: {
-                        scale: 2,
-                        useCORS: true,
-                        backgroundColor: '#ffffff',
-                        logging: false,
-                        letterRendering: true,
-                        allowTaint: false,
-                        windowWidth: element.scrollWidth,
-                        windowHeight: element.scrollHeight
-                    },
-                    jsPDF: {
-                        unit: 'mm',
-                        format: 'a4',
-                        orientation: 'portrait',
-                        compress: true
-                    },
-                    pagebreak: {
-                        mode: ['avoid-all', 'css', 'legacy'],
-                        avoid: ['.exercice-item', '.conseil', '.objectifs', 'h2', 'h3']
-                    }
-                };
-
-                // Générer et télécharger le PDF
-                html2pdf().set(options).from(element).save().then(() => {
-                    // Retirer le mode PDF après génération
-                    body.classList.remove('pdf-mode');
-                }).catch((error) => {
-                    console.error('Erreur lors de la génération du PDF:', error);
-                    body.classList.remove('pdf-mode');
-                });
-            }, 100);
-        }
-    </script>
+    <h1>Salut</h1>
 </body>
-
 </html>
